--- a/app/views/layouts/_form-history.haml
+++ b/app/views/layouts/_form-history.haml
@@ -1,12 +1,23 @@
-/ .container
-/   = form_for history do |f|
-/     = f.label :maintenance, class: "label"
-/     = f.date_select :maintenance
-/     = f.label :plan
-/     = f.date_select :plan
-/     = f.label :title
-/     = f.text_field :title, placeholder: "内容"
-/     = f.label :comment
-/     = f.text_field :comment, autofocus: true, placeholder: "コメント"
-/     = f.select :car_id, @cars.collect{|c| [c.name, c.id]}
-/     = f.submit '記録する', class: "submit"
+= form_with(model: history, local: true, class: "form") do |f|
+  .form__box
+    .form__box--left
+      = f.label :maintenance, class: "label"
+      %br
+      = f.label :plan, class: "label"
+      %br
+      = f.label :title, class: "label"
+      %br
+      = f.label :comment, class: "label"
+      %br
+      = f.label :car_select, class: "label"
+    .form__box--right
+      = f.date_select :maintenance, class: "select"
+      %br
+      = f.date_select :plan, class: "select"
+      %br
+      = f.text_field :title, placeholder: "内容", class: "text"
+      %br
+      = f.text_field :comment, autofocus: true, placeholder: "コメント", class: "text"
+      %br
+      = f.select :car_id, @cars.collect{|c| [c.name, c.id]}
+  = f.submit '記録する', class: "submit"
