--- a/app/views/histories/new.haml
+++ b/app/views/histories/new.haml
@@ -1,12 +1,1 @@
-.container
-  = form_for @history do |f|
-    = f.label :maintenance, class: "label"
-    = f.date_select :maintenance
-    = f.label :plan
-    = f.date_select :plan
-    = f.label :title
-    = f.text_field :title, placeholder: "内容", class: "comment"
-    = f.label :comment
-    = f.text_field :comment, autofocus: true, placeholder: "コメント"
-    = f.select :car_id, @cars.collect{|c| [c.name, c.id]}
-    = f.submit '記録する', class: "submit"
+= render partial: "layouts/form-history", locals: {history: @history}
