--- a/app/assets/stylesheets/module/form.scss
+++ b/app/assets/stylesheets/module/form.scss
@@ -1,3 +1,4 @@
+// 情報入力ホーム
 .form {
   padding: 0px 50px;
   margin: 0 0 0 50px;
@@ -36,7 +37,7 @@
         display: inline-block;
         margin: 20px 10px;
         height: 46px;
-        width: 185px;
+        width: 165px;
       }
     }
   }
@@ -58,6 +59,104 @@
   .submit:hover {
     box-shadow: none;
     color: #999;
+    background-color: #fff;
+  }
+}
+
+// devise関連のフォーム
+.contents {
+  height: 100vh;
+  width: 100%;
+  background-image: image-url("taxi-238478_1280.jpg");
+  background-size: cover;
+  h2 {
+    font-weight: bold;
+    font-size: 36px;
+    text-align: center;
+    padding: 40px 0 0 0;
+    color: #333;
+  }
+  &__form {
+    margin: 0 auto;
+    padding: 40px 50px;
+    width: 50%;
+    // background-color: #fff;
+    .devise {
+      display: flex;
+      &__left {
+        width: 30%;
+        background-color: #eee;
+        text-align: center;
+        .label {
+          font-weight: bold;
+          margin: 20px 0;
+          padding: 20px 40px;
+          display: block;
+
+        }
+      }
+      &__right {
+        width: 80%;
+        background-color: #aaa;
+        text-align: center;
+        .text {
+          padding: 0 20px;
+          margin: 32px 0px;
+          height: 40px;
+          width: 80%;
+          font-size: 24px;
+        }
+      }
+    }
+    .submit {
+      margin: 40px auto 0;
+      display: block;
+      border-radius: 7%;
+      font-size: 19pt;
+      text-align: center;
+      cursor: pointer;
+      padding: 11px 62px;
+      background-color: #000;
+      color: #fff;
+      line-height: 1em;
+      transition: .3s;
+      box-shadow: 11px 11px 13px #666;
+      border: 2px solid #000;
+    }
+    .submit:hover {
+      box-shadow: none;
+      color: #000;
+      border: 2px solid #fff;
+      background-color: #fff;
+    }
+  }
+  h3 {
+    font-weight: bold;
+    font-size: 36px;
+    text-align: center;
+    padding: 20px 0;
+    color: #333;
+  }
+  .link {
+    width: 150px;
+    margin: 0 auto;
+    display: block;
+    font-size: 19px;
+    text-align: center;
+    color: #fff;
+    background-color: #000;
+    text-decoration: none;
+    padding: 10px 40px;
+    line-height: 1em;
+    transition: .3s;
+    box-shadow: 11px 11px 13px #666;
+    border: 2px solid #000;
+    border-radius: 7%;
+  }
+  .link:hover {
+    box-shadow: none;
+    color: #000;
+    border: 2px solid #fff;
     background-color: #fff;
   }
 }
