--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -1,25 +1,24 @@
-%h2 新規登録する
-= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
-  = render "devise/shared/error_messages", resource: resource
-  .field
-    = f.label :name
-    %br/
-    = f.text_field :name, autofocus: true, autocomplete: "name"
-  .field
-    = f.label :email
-    %br/
-    = f.email_field :email, autofocus: true, autocomplete: "email"
-  .field
-    = f.label :password
-    - if @minimum_password_length
-      %em
-        (#{@minimum_password_length} characters minimum)
-    %br/
-    = f.password_field :password, autocomplete: "new-password"
-  .field
-    = f.label :password_confirmation
-    %br/
-    = f.password_field :password_confirmation, autocomplete: "new-password"
-  .actions
-    = f.submit "新規登録する"
-= link_to "ログインへ", new_user_session_path, class: "link"
+.contents
+  %h2 --------- 新規登録する ---------
+  = form_with(model: @user, local: true, class: "contents__form") do |f|
+    / = render "devise/shared/error_messages", resource: resource
+    .devise
+      .devise__left
+        = f.label :name, class: "label"
+        %br
+        = f.label :email, class: "label"
+        %br
+        = f.label :password, class: "label"
+        %br
+        = f.label :password_confirmation, class: "label"
+      .devise__right
+        = f.text_field :name, autofocus: true, placeholder: "例) 鈴木 太郎", autocomplete: "name", class: "text"
+        = f.email_field :email, autofocus: true, placeholder: "suzuki@example.com", autocomplete: "email", class: "text"
+        %br
+        = f.password_field :password, placeholder: "6文字以上の半角英数字", autocomplete: "new-password", class: "text"
+        %br
+        = f.password_field :password_confirmation, placeholder: "パスワードを再入力してください", autocomplete: "new-password", class: "text"
+    = f.submit "新規登録する", class: "submit"
+    %br
+    %h3 or
+    = link_to "ログインへ", new_user_session_path, class: "link"
